# combinatorial-games

./: Combinatorial.hs  Game.hs  Hackenbush.hs  Movespace.hs  PositionSpace.hs  README.md  TakeAndBreak.hs  TakeBreak.hs  ToadsAndFrogs.hs  Util.hs  combinatorial-games.cabal  game.hs  hackenbush.hs
src/: Combinatorial.hs  Game.hs  Thermograph.hs
src/Games/: Hackenbush.hs  TakeAndBreak.hs  ToadsAndFrogs.hs
src/Util/: List.hs
test/: CombinatorialInstancesTests.hs  GameTests.hs  Tests.hs
