cabal-version:      2.4
name:               combinatorial-games
version:            0.1.0.0

extra-source-files:
    README.md

library combinatorial-games-lib
    exposed-modules:
        Game
        Combinatorial
        Thermograph
        Games.Hackenbush
        Games.TakeAndBreak
        Games.ToadsAndFrogs

    other-modules:
        Util.List

    extensions:
        FlexibleInstances

    build-depends:    base ^>=4.16.4.0,data-memocombinators >= 0.5.1 && < 0.6
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite combinatorial-games-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    build-depends:    base ^>=4.16.4.0,HUnit,combinatorial-games-lib
    hs-source-dirs:   test
    other-modules:
        GameTests
        CombinatorialInstancesTests
    default-language: Haskell2010
